Added about text and client-id for request for google tracking

--- a/src/app/components/main/about/about.component.html
+++ b/src/app/components/main/about/about.component.html
@@ -1,3 +1,42 @@
-<p>
-  about works!
-</p>
+<div class="container small">
+  <p-card>
+    <h2>About wows-monitor</h2>
+    <p>
+      This app was created with <a [externalLink] href="https://electronjs.org/">Electron</a> and <a [externalLink]
+        href="https://angular.io/">Angular</a>.<br />
+      It mainly functions as a user interface for data provided by a centralized API written in <a [externalLink]
+        href="https://github.com/dotnet/core">.NET Core</a>.<br /><br />
+    </p>
+    <p>
+      This app uses publicly available data from the Waraming API as part of the WG DPP program.
+      By using this app you agree to:
+    </p>
+    <ul>
+      <li>fetching data from API on your behalf</li>
+      <li>processing of fetched data</li>
+      <li>display of fetched data in this app</li>
+    </ul>
+    <p>
+      It only accesses publicly available information (e.g. number of battles, statistics). We do not collect
+      private data (e.g. email address, number of credits).
+    </p>
+    <p>
+      The color values for the Personal Rating and other stats are provided by <a [externalLink]
+        href="https://wows-numbers.com">wows-numbers.com</a><br /><br />
+    </p>
+    <p>
+      If you are interested in the source code for this app check out the <a [externalLink]
+        href="https://dev.azure.com/wows-monitor/app">repository.</a><br /><br />
+    </p>
+    <p>
+      If you need support, have suggestions for features or want to report a bug you can either open a ticket in the
+      repository or join the wows-monitor discord server. <br />
+      <a [externalLink] href="https://discord.gg/Tds7WBs">https://discord.gg/Tds7WBs</a>
+    </p>
+    <p>
+      If you want to support this project financially (and me) you can do so by becoming a patron at <a [externalLink] href=""></a> or donating
+      via PayPal.me <a [externalLink]  href="https://www.paypal.me/stewieoO">https://www.paypal.me/stewieoO</a>. <br />
+      Keep in mind that i do not have any special features for patrons yet, but feel free to make suggestions :)
+    </p>
+  </p-card>
+</div>
