--- a/src/app/components/main/about/about.component.html
+++ b/src/app/components/main/about/about.component.html
@@ -1,10 +1,10 @@
 <div class="container small">
-  <p-card>
+  <p-card externalLink>
     <h2>About wows-monitor</h2>
     <p>
-      This app was created with <a [externalLink] href="https://electronjs.org/">Electron</a> and <a [externalLink]
+      This app was created with <a href="https://electronjs.org/">Electron</a> and <a
         href="https://angular.io/">Angular</a>.<br />
-      It mainly functions as a user interface for data provided by a centralized API written in <a [externalLink]
+      It mainly functions as a user interface for data provided by a centralized API written in <a
         href="https://github.com/dotnet/core">.NET Core</a>.<br /><br />
     </p>
     <p>
@@ -21,21 +21,22 @@
       private data (e.g. email address, number of credits).
     </p>
     <p>
-      The color values for the Personal Rating and other stats are provided by <a [externalLink]
+      The color values for the Personal Rating and other stats are provided by <a
         href="https://wows-numbers.com">wows-numbers.com</a><br /><br />
     </p>
     <p>
-      If you are interested in the source code for this app check out the <a [externalLink]
+      If you are interested in the source code for this app check out the <a
         href="https://dev.azure.com/wows-monitor/app">repository.</a><br /><br />
     </p>
     <p>
       If you need support, have suggestions for features or want to report a bug you can either open a ticket in the
       repository or join the wows-monitor discord server. <br />
-      <a [externalLink] href="https://discord.gg/Tds7WBs">https://discord.gg/Tds7WBs</a>
+      <a href="https://discord.gg/Tds7WBs">https://discord.gg/Tds7WBs</a>
     </p>
     <p>
-      If you want to support this project financially (and me) you can do so by becoming a patron at <a [externalLink] href=""></a> or donating
-      via PayPal.me <a [externalLink]  href="https://www.paypal.me/stewieoO">https://www.paypal.me/stewieoO</a>. <br />
+      If you want to support this project financially (and me) you can do so by becoming a patron at <a href=""></a> or
+      donating
+      via PayPal.me <a href="https://www.paypal.me/stewieoO">https://www.paypal.me/stewieoO</a>. <br />
       Keep in mind that i do not have any special features for patrons yet, but feel free to make suggestions :)
     </p>
   </p-card>
