Added small fontsize

--- a/src/styles/monitor.scss
+++ b/src/styles/monitor.scss
@@ -19,6 +19,10 @@ app-monitor {
       margin-bottom: 0;
     }
 
+    &.fz-small {
+      font-size: 0.7em;
+    }
+
     &.fz-normal {
       font-size: 0.85em;
     }
