Fixed shared module in about.module

--- a/src/app/components/main/about/about.component.html
+++ b/src/app/components/main/about/about.component.html
@@ -1,5 +1,5 @@
-<div class="container small">
-  <p-card externalLink>
+<div class="container small" externalLink>
+  <p-card >
     <h2>About wows-monitor</h2>
     <p>
       This app was created with <a href="https://electronjs.org/">Electron</a> and <a
@@ -31,12 +31,14 @@
     <p>
       If you need support, have suggestions for features or want to report a bug you can either open a ticket in the
       repository or join the wows-monitor discord server. <br />
-      <a href="https://discord.gg/Tds7WBs">https://discord.gg/Tds7WBs</a>
+      <a href="https://discord.gg/Tds7WBs">discord.gg/Tds7WBs</a>
     </p>
+    <i class="pi pi-money-bill" style="font-size: 2em;"></i>
     <p>
-      If you want to support this project financially (and me) you can do so by becoming a patron at <a href=""></a> or
+      If you want to support this project financially you can do so by becoming a patron at <a
+        href="https://www.patreon.com/wowsmonitor">patreon.com/wowsmonitor</a> or
       donating
-      via PayPal.me <a href="https://www.paypal.me/stewieoO">https://www.paypal.me/stewieoO</a>. <br />
+      via <a href="https://www.paypal.me/stewieoO">paypal.me/stewieoO</a>. <br />
       Keep in mind that i do not have any special features for patrons yet, but feel free to make suggestions :)
     </p>
   </p-card>
