--- a/src/app/components/main/about/about.component.html
+++ b/src/app/components/main/about/about.component.html
@@ -1,6 +1,9 @@
 <div class="container small" externalLink>
-  <p-card >
+  <p-card>
     <h2>About wows-monitor</h2>
+    <p>
+      Version: <strong>{{version}}</strong>
+    </p>
     <p>
       This app was created with <a href="https://electronjs.org/">Electron</a> and <a
         href="https://angular.io/">Angular</a>.<br />
