--- a/src/app/components/main/settings/settings.component.html
+++ b/src/app/components/main/settings/settings.component.html
@@ -59,9 +59,20 @@
         </div>
       </article>
     </section>
-    <section *isDesktop>
+    <section>
       <h3>{{ 'settings.miscellaneous.title' | translate }}</h3>
-      <article>
+      <article *isBrowser>
+        <caption>
+          {{ 'settings.miscellaneous.forceLandscape.caption' | translate }}
+        </caption>
+        <summary>
+          {{ 'settings.miscellaneous.forceLandscape.summary' | translate }}
+        </summary>
+        <div class="input-wrap">
+          <p-inputSwitch [(ngModel)]="config.forceLandscape"></p-inputSwitch>
+        </div>
+      </article>
+      <article *isDesktop>
         <caption>
           {{ 'settings.miscellaneous.overwriteReplaysDirectory.caption' | translate }}
         </caption>
