Close to tray only on desktop

--- a/src/app/components/main/settings/settings.component.html
+++ b/src/app/components/main/settings/settings.component.html
@@ -14,7 +14,7 @@
           <p-inputSwitch [(ngModel)]="config.autoUpdate"></p-inputSwitch>
         </div>
       </article>
-      <article>
+      <article *isDesktop>
         <caption>
           {{ 'settings.general.closeToTray.caption' | translate }}
         </caption>
