Fixed fullscreen-landscape mode

--- a/src/app/components/main/topbar/topbar.component.html
+++ b/src/app/components/main/topbar/topbar.component.html
@@ -24,6 +24,10 @@
   <app-path-picker *isDesktop></app-path-picker>
   <app-status></app-status>
   <app-connection></app-connection>
+  <div class="iconWrapper" *isBrowser (click)="fullscreenSwitch()">
+      <fa-icon *ngIf="!isFullscreen" [icon]="expandIcon" size="2x" [fixedWidth]="true"></fa-icon>
+      <fa-icon *ngIf="isFullscreen" [icon]="compressIcon" size="2x" [fixedWidth]="true"></fa-icon>
+    </div>
 </div>
 
 <p-sidebar [(visible)]="sidebarVisible" appendTo="body" [showCloseIcon]="false">
