Fixed Restore Icon

--- a/src/app/components/main/titlebar/titlebar.component.html
+++ b/src/app/components/main/titlebar/titlebar.component.html
@@ -12,7 +12,7 @@
 
   <div class="title-icon" (click)="maximize()">
     <fa-icon *ngIf="win?.maximizable && !win?.isMaximized()" [icon]="maximizeIcon"></fa-icon>
-    <fa-icon *ngIf="!win?.maximizable" [icon]="restoreIcon"></fa-icon>
+    <fa-icon *ngIf="win?.isMaximized()" [icon]="restoreIcon"></fa-icon>
   </div>
 
   <div class="title-icon close" (click)="close()">
