--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,4 @@
 @import 'styles/monitor.scss';
 @import 'styles/settings.scss';
 @import 'styles/changelogs.scss';
+@import 'styles/configtool.scss';
