added option to select avg ship damage for player background

--- a/src/app/components/main/settings/settings.component.html
+++ b/src/app/components/main/settings/settings.component.html
@@ -56,6 +56,14 @@
               <span class="ui-button-text ui-clickable ng-star-inserted">{{item.label | translate}}</span>
             </ng-template>
           </p-selectButton>
+          <!-- <p-dropdown appendTo="body" [options]="playerBackgroundsOptions" [(ngModel)]="config.playerBackgrounds">
+            <ng-template let-item pTemplate="selectedItem">
+              {{item.label | translate}}
+            </ng-template>
+            <ng-template let-item pTemplate="item">
+              {{item.label | translate}}
+            </ng-template>
+          </p-dropdown> -->
         </div>
       </article>
       <article>
